--- a/charts/gantt/Chart.yaml
+++ b/charts/gantt/Chart.yaml
@@ -1,9 +1,12 @@
 apiVersion: v1
+name: gantt
+version: 1.0.1
 appVersion: "1.0.4"
 description: Web app to make gantt diagrams
-name: gantt
 home: https://github.com/cnieg/gantt
-version: 1.0.1
+sources:
+  - https://github.com/cnieg/helm-charts/tree/master/charts/gantt
+  - https://github.com/cnieg/gantt
 maintainers:
   - name: Thomah
     email: thomas.hingant@cnieg.fr
