[elastic-stack]: update timeout when test data pod
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -6,6 +6,7 @@ client:
       cpu: 100m
       memory: 100Mi
 data:
+  clusterHealthCheckParams: "wait_for_status=green&timeout=10s"
   replicas: 1
   minimumMasterNodes: 1
   persistence:
