[elastic-stack]: update timeout when test data pod
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -1,4 +1,5 @@
 client:
+  clusterHealthCheckParams: "wait_for_status=green&timeout=10s"
   replicas: 1
   minimumMasterNodes: 1
   resources:
@@ -16,6 +17,7 @@ data:
       cpu: 100m
       memory: 100Mi
 master:
+  clusterHealthCheckParams: "wait_for_status=green&timeout=10s"
   replicas: 1
   minimumMasterNodes: 1
   persistence:
