[elastic-stack]: bump dependencies elastic to 7.7.0 (#19)

--- a/charts/elastic-stack/ci/ci-values.yaml
+++ b/charts/elastic-stack/ci/ci-values.yaml
@@ -24,12 +24,14 @@ master:
       cpu: 100m
       memory: 100Mi
 logstash:
+  enabled: false
   replicas: 1
   resources:
     requests:
       cpu: 100m
       memory: 100Mi
 filebeat:
+  enabled: false
   replicas: 1
   resources:
     requests:
