[clamapi]: init chart
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/ct.yaml
+++ b/ct.yaml
@@ -1,3 +1,4 @@
 chart-repos:
   - elastic=https://helm.elastic.co
+  - stable=https://kubernetes-charts.storage.googleapis.com
 helm-extra-args: --timeout 500s
