[clamapi]: fix api version for deploy clamav
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -18,6 +18,8 @@ clamav:
   # externalHost:
   # externalPort:
   timeout: 1000
+  kubeMeta:
+    deploymentApiVersion: apps/v1
 
 imagePullSecrets: []
 nameOverride: ""
