--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -67,13 +67,13 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /actuator/health
+    path: /actuator/health/liveness
     port: http
   initialDelaySeconds: 10
   periodSeconds: 10
 readinessProbe:
   httpGet:
-    path: /actuator/health
+    path: /actuator/health/readiness
     port: http
   initialDelaySeconds: 10
   periodSeconds: 10
