--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: audig/clamapi
-  tag: 1.3.4
+  tag: 2.0.0
   pullPolicy: IfNotPresent
 
 
@@ -67,13 +67,13 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /actuator/health
+    path: /actuator/health/liveness
     port: http
   initialDelaySeconds: 10
   periodSeconds: 10
 readinessProbe:
   httpGet:
-    path: /actuator/health
+    path: /actuator/health/readiness
     port: http
   initialDelaySeconds: 10
   periodSeconds: 10
