[pulsar]: Fix set limit memory toolset
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/values.yaml
+++ b/charts/pulsar/values.yaml
@@ -777,6 +777,9 @@ toolset:
   tolerations: []
   gracePeriod: 30
   resources:
+    limits:
+      memory: 256Mi
+      cpu: "0.1"
     requests:
       memory: 256Mi
       cpu: "0.1"
