[pulsar]: Fix set limit memory recovery
Signed-off-by: Guillaume Audic <audic.gui@gmail.com>

--- a/charts/pulsar/values.yaml
+++ b/charts/pulsar/values.yaml
@@ -513,6 +513,9 @@ autorecovery:
   tolerations: []
   gracePeriod: 30
   resources:
+    limits:
+      memory: 1Gi
+      cpu: 250m
     requests:
       memory: 1Gi
       cpu: 250m
