Chart.yaml: add missing fields, plus Helm's docs-like fields ordering

--- a/charts/dependency-track/Chart.yaml
+++ b/charts/dependency-track/Chart.yaml
@@ -1,5 +1,12 @@
 apiVersion: v1
-appVersion: 3.8.0
-description: A Helm chart for Kubernetes
 name: dependency-track
 version: 1.0.10-SNAPSHOT
+description: A Helm chart for Dependency-Track
+home: https://docs.dependencytrack.org/
+sources:
+  - https://github.com/DependencyTrack/dependency-track/tree/master
+mainteners:
+  - name: CNIEG
+    email: maintainers@cnieg.fr
+icon: https://docs.dependencytrack.org/images/dt-logo-white-text.svg
+appVersion: 3.8.0
