--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -18,14 +18,15 @@ nfs:
   path: /nfsserver/dependency-track/data
 
 env:
-  ALPINE_DATABASE_MODE: external
-  ALPINE_DATABASE_URL: jdbc:postgresql://db-postgres:5432/dtrack"
-  ALPINE_DATABASE_DRIVER: org.postgresql.Driver
-  ALPINE_DATABASE_DRIVER_PATH: /extlib/postgresql-42.2.5.jar
-  ALPINE_DATABASE_POOL_ENABLED: true
-  ALPINE_DATABASE_POOL_MAX_SIZE: 10
-  ALPINE_DATABASE_POOL_IDLE_TIMEOUT: 600000
-  ALPINE_DATABASE_POOL_MAX_LIFETIME: 600000
+  ALPINE_DATABASE_MODE: internal
+# ALPINE_DATABASE_MODE: external
+# ALPINE_DATABASE_URL: jdbc:postgresql://db-postgres:5432/dtrack"
+# ALPINE_DATABASE_DRIVER: org.postgresql.Driver
+# ALPINE_DATABASE_DRIVER_PATH: /extlib/postgresql-42.2.5.jar
+# ALPINE_DATABASE_POOL_ENABLED: true
+# ALPINE_DATABASE_POOL_MAX_SIZE: 10
+# ALPINE_DATABASE_POOL_IDLE_TIMEOUT: 600000
+# ALPINE_DATABASE_POOL_MAX_LIFETIME: 600000
   ALPINE_LDAP_ENABLED: "true"
   ALPINE_LDAP_BASEDN: "DC=your,DC=domain,DC=com"
   ALPINE_LDAP_SECURITY_AUTH: "simple"
