fix: add option for storageClass

--- a/charts/castlemock/values.yaml
+++ b/charts/castlemock/values.yaml
@@ -56,6 +56,7 @@ persistence:
   enabled: false
   accessMode: ReadWriteOnce
   size: 512Mi
+  storageClass: "-"
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
