fix: test chart url

--- a/charts/castlemock/templates/tests/test-connection.yaml
+++ b/charts/castlemock/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "castlemock.fullname" . }}:{{ .Values.service.port }}/{{ include "castlemock.fullname" . }}']
+      args: ['{{ include "castlemock.fullname" . }}:{{ .Values.service.port }}/{{ include "castlemock.name" . }}']
   restartPolicy: Never
