templates: make use of dependency-track.labels

--- a/charts/dependency-track/templates/deployment.yaml
+++ b/charts/dependency-track/templates/deployment.yaml
@@ -3,10 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "dependency-track.fullname" . }}
   labels:
-    app: {{ include "dependency-track.name" . }}
-    chart: {{ include "dependency-track.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+{{ include "dependency-track.labels" . | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
