--- a/charts/dependency-track/templates/ingress.yaml
+++ b/charts/dependency-track/templates/ingress.yaml
@@ -6,10 +6,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app: {{ template "dependency-track.name" . }}
-    chart: {{ template "dependency-track.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  {{ include "dependency-track.labels" . | indent 4 }}
 {{- with .Values.ingress.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
