--- a/charts/dependency-track/templates/service.yaml
+++ b/charts/dependency-track/templates/service.yaml
@@ -3,10 +3,7 @@ kind: Service
 metadata:
   name: {{ template "dependency-track.fullname" . }}
   labels:
-    app: {{ template "dependency-track.name" . }}
-    chart: {{ template "dependency-track.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+{{ include "dependency-track.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
