--- a/charts/dependency-track/Chart.yaml
+++ b/charts/dependency-track/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 name: dependency-track
 version: 1.0.10-SNAPSHOT
 description: A Helm chart for Dependency-Track
-home: https://docs.dependencytrack.org/
+home: 'https://docs.dependencytrack.org/'
 sources:
   - https://github.com/DependencyTrack/dependency-track/tree/master
 maintainers:
   - name: CNIEG
     email: maintainers@cnieg.fr
-icon: https://docs.dependencytrack.org/images/dt-logo-white-text.svg
+icon: 'https://docs.dependencytrack.org/images/dt-logo-white-text.svg'
 appVersion: 3.8.0
