--- a/charts/dependency-track/Chart.yaml
+++ b/charts/dependency-track/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: dependency-track
-version: 1.0.10-SNAPSHOT
+version: 0.0.1
 description: A Helm chart for Dependency-Track
 home: 'https://docs.dependencytrack.org/'
 sources:
