--- a/charts/dependency-track/templates/deployment.yaml
+++ b/charts/dependency-track/templates/deployment.yaml
@@ -17,10 +17,13 @@ spec:
         release: {{ .Release.Name }}
     spec:
       volumes:
-      - name: data
-        nfs:
-          server: {{ .Values.nfs.server }}
-          path: {{ .Values.nfs.path }}
+        - name: data
+          {{- if .Values.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.persistence.existingClaim | default (include "dependency-track.name" .) }}
+          {{- else }}
+          emptyDir: {}
+          {{- end -}}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
