give a try to a workaround to fix a persitence-related build fail

--- a/charts/gantt/values.yaml
+++ b/charts/gantt/values.yaml
@@ -35,6 +35,7 @@ persistence:
   enabled: false
   accessMode: ReadWriteOnce
   size: 128Mi
+  existingClaim: dependency-track
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
