deployment: fix incorrect end keyword

--- a/charts/dependency-track/templates/deployment.yaml
+++ b/charts/dependency-track/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             claimName: {{ .Values.persistence.existingClaim | default (include "dependency-track.name" .) }}
           {{- else }}
           emptyDir: {}
-          {{- end -}}
+          {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
