--- a/charts/castlemock/templates/pvc.yaml
+++ b/charts/castlemock/templates/pvc.yaml
@@ -12,10 +12,6 @@ spec:
     requests:
       storage: {{ .Values.persistence.size | quote }}
   {{- if .Values.persistence.storageClass }}
-  {{- if (eq "-" .Values.persistence.storageClass) }}
-  storageClassName: ""
-  {{- else }}
-  storageClassName: "{{ .Values.persistence.storageClass }}"
-  {{- end }}
-  {{- end }}
+  storageClassName: {{ .Values.persistence.storageClass }}
+  {{- end -}}
   {{- end }}
