--- a/charts/castlemock/templates/pvc.yaml
+++ b/charts/castlemock/templates/pvc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: {{ template "castlemock.name" . }}
   labels:
-  {{ include "castlemock.labels" . | indent 4 }}
+  {{ include "castlemock.labels" . | nindent 4 }}
 spec:
   accessModes:
     - {{ .Values.persistence.accessMode | quote }}
