values.yaml : PR feedback : ALPINE_LDAP must be commented

--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -27,16 +27,16 @@ env:
 # ALPINE_DATABASE_POOL_MAX_SIZE: 10
 # ALPINE_DATABASE_POOL_IDLE_TIMEOUT: 600000
 # ALPINE_DATABASE_POOL_MAX_LIFETIME: 600000
-  ALPINE_LDAP_ENABLED: "true"
-  ALPINE_LDAP_BASEDN: "DC=your,DC=domain,DC=com"
-  ALPINE_LDAP_SECURITY_AUTH: "simple"
-  ALPINE_LDAP_AUTH_USERNAME_FORMAT: "%s"
-  ALPINE_LDAP_ATTRIBUTE_NAME: "sAMAccountName"
-  ALPINE_LDAP_ATTRIBUTE_MAIL: "mail"
-  ALPINE_LDAP_GROUPS_FILTER: "(&(objectClass=group)(objectCategory=Group))"
-  ALPINE_LDAP_USER_GROUPS_FILTER: "(member:1.2.840.113556.1.4.1941:={USER_DN})"
-  ALPINE_LDAP_USER_PROVISIONING: "true"
-  ALPINE_LDAP_TEAM_SYNCHRONIZATION: "true"
+# ALPINE_LDAP_ENABLED: "true"
+# ALPINE_LDAP_BASEDN: "DC=your,DC=domain,DC=com"
+# ALPINE_LDAP_SECURITY_AUTH: "simple"
+# ALPINE_LDAP_AUTH_USERNAME_FORMAT: "%s"
+# ALPINE_LDAP_ATTRIBUTE_NAME: "sAMAccountName"
+# ALPINE_LDAP_ATTRIBUTE_MAIL: "mail"
+# ALPINE_LDAP_GROUPS_FILTER: "(&(objectClass=group)(objectCategory=Group))"
+# ALPINE_LDAP_USER_GROUPS_FILTER: "(member:1.2.840.113556.1.4.1941:={USER_DN})"
+# ALPINE_LDAP_USER_PROVISIONING: "true"
+# ALPINE_LDAP_TEAM_SYNCHRONIZATION: "true"
 # ALPINE_HTTP_PROXY_ADDRESS: proxy-server.com
 # ALPINE_HTTP_PROXY_PORT: 8080
 
