--- a/charts/castlemock/values.yaml
+++ b/charts/castlemock/values.yaml
@@ -57,6 +57,7 @@ persistence:
   accessMode: ReadWriteOnce
   size: 512Mi
   storageClass:
+  annotations: {}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
