--- a/charts/passbolt/values.yaml
+++ b/charts/passbolt/values.yaml
@@ -77,6 +77,15 @@ passbolt:
   baseUrl: passbolt.organization.com
   # pro: false
 
+mariadb:
+  enabled: true
+  image:
+    debug: true
+  auth:
+    database: passbolt
+    username: passbolt
+    password: passbolt
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
