fix(passbolt): Set passbolt-mariadb as default name for mariadb service

--- a/charts/passbolt/values.yaml
+++ b/charts/passbolt/values.yaml
@@ -81,6 +81,7 @@ passbolt:
 
 mariadb:
   enabled: true
+  fullnameOverride: passbolt-mariadb
   auth:
     database: passbolt
     username: passbolt
