--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -70,11 +70,15 @@ persistence:
   storageClass: "-"
   existingClaim: ""
 
-resources:
-# This allow to explicitly set allocated resources per pod
-  limits:
-    cpu: 2
-    memory: 5120Mi
-  requests:
-    cpu: 2
-    memory: 5120Mi
+resources: {}
+  # We usually recommend not to specify default resources and to leave this as a conscious
+  # choice for the user. This also increases chances charts run on environments with little
+  # resources, such as Minikube. If you do want to specify resources, uncomment the following
+  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
+  # limits:
+  #   cpu: 2
+  #   memory: 5120Mi
+  # requests:
+  #   cpu: 2
+  #   memory: 5120Mi
+
