--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -15,6 +15,8 @@ service:
 
 env:
   ALPINE_DATABASE_MODE: internal
+# Environement variables to bypass cpu control
+  JAVA_OPTIONS: -XX:ActiveProcessorCount=2
 # ALPINE_DATABASE_MODE: external
 # ALPINE_DATABASE_URL: jdbc:postgresql://db-postgres:5432/dtrack"
 # ALPINE_DATABASE_DRIVER: org.postgresql.Driver
