--- a/charts/dependency-track/values.yaml
+++ b/charts/dependency-track/values.yaml
@@ -15,7 +15,7 @@ service:
 
 env:
   ALPINE_DATABASE_MODE: internal
-# Environement variables to bypass cpu control
+# Environement variables to satisfy dependency track requirements
   JAVA_OPTIONS: -XX:ActiveProcessorCount=2 -Xmx4G
 # ALPINE_DATABASE_MODE: external
 # ALPINE_DATABASE_URL: jdbc:postgresql://db-postgres:5432/dtrack"
