--- a/charts/passbolt/templates/deployment.yaml
+++ b/charts/passbolt/templates/deployment.yaml
@@ -55,6 +55,14 @@ spec:
             {{- else }}
               value: https://{{ template "passbolt.name" . }}:{{ .Values.service.port }}
             {{- end }}
+            {{- if not .Values.env.DATASOURCES_DEFAULT_USERNAME }}
+            - name: DATASOURCES_DEFAULT_USERNAME
+              value: passbolt
+            {{- end -}}
+            {{- if not .Values.env.DATASOURCES_DEFAULT_PASSWORD }}
+            - name: DATASOURCES_DEFAULT_PASSWORD
+              value: passbolt
+            {{- end -}}
           volumeMounts:
             {{- if .Values.persistence.enabled }}
             - name: data
