--- a/charts/clamapi/requirements.yaml
+++ b/charts/clamapi/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
 - name: clamav
   version: 1.0.5
-  repository: https://kubernetes-charts.storage.googleapis.com
+  repository: https://charts.helm.sh/stable
   condition: clamav.enabled
