--- a/charts/clamapi/values.yaml
+++ b/charts/clamapi/values.yaml
@@ -21,6 +21,10 @@ clamav:
   kubeMeta:
     deploymentApiVersion: apps/v1
 
+env: {}
+#  SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE: 10MB
+#  SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE: 10MB
+
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
