--- a/ct.yaml
+++ b/ct.yaml
@@ -1,4 +1,5 @@
 chart-repos:
   - elastic=https://helm.elastic.co
   - bitnami=https://charts.bitnami.com/bitnami
+  - stable-helm=https://charts.helm.sh/stable
 helm-extra-args: --timeout 500s
