--- a/charts/maildev/values.yaml
+++ b/charts/maildev/values.yaml
@@ -31,6 +31,8 @@ extraArgs:
 #  - "--mail-directory"
 #  - "/home/node/maildev-data"
 
+podAnnotations: {}
+
 persistence:
   enabled: false
   accessMode: ReadWriteMany
